# WTExtractor

./: .gitignore  CMakeLists.txt  README.md  data_desc.txt  file_handle_options.csv  learnings  pwtdecode.py  wtextract.py  wtxtreader.py
cmake/: LibFindMacros.cmake
docs/: file_handle_options_formatted.ods  pwt_vertex_reorder_simulator.py  wld3_notes.txt
libwld3/: CMakeLists.txt  Makefile  dataaccessors.c  dataaccessors.h  main.c  multifh.h  pwt_decode.c  pwt_decode.h  pwtdecode_cli_main.c  wld3_extract.c  wld3_extract.h  wtextract_cli_main.c
libwld3/include/: dataaccessors.h  dshfl.h  pwt_decode.h  wld3_extract.h
libwld3/src/: dataaccessors.c  dshfl.c  multifh.c  multifh.h  wld3_extract.c
pwtviewer/: .gitignore  CMakeLists.txt  FrameTreeItem.cpp  FrameTreeItem.h  FrameTreeModel.cpp  FrameTreeModel.h  MainWindow.cpp  MainWindow.h  Makefile.am  ModelFrameTreeView.cpp  ModelFrameTreeView.h  OgreFramework.cpp  OgreFramework.hpp  PWTModelFrame.cpp  PWTModelFrame.h  PWTViewer.cpp  PWTViewer.hpp  README.md  bootstrap  configure.ac  main.cpp  mainwindow.ui  plugins.cfg  resource.qrc  resources.cfg
pwtviewer/CMake/Dependencies/: OGRE.cmake
pwtviewer/cmake/: FindOGRE.cmake  FindPkgMacros.cmake
pwtviewer/include/: EmptyProjectGameState.h
pwtviewer/include/OgreCommon/System/: MainEntryPoints.h
pwtviewer/src/: EmptyProject.cpp  EmptyProjectGameState.cpp
pwtviewer/src/OgreCommon/: GraphicsSystem.cpp
pwtviewer/src/OgreCommon/System/Desktop/: MainLoopMultiThreaded.cpp  MainLoopSingleThreaded.cpp
pywttools/: .gitignore  pwtdecode.py  requirements.txt  wtextract.py
sample_files/: 2cubes.pwt  2cubes.wt  anim2cube.pwt  anim2cube.wt  sample.pwt  short.wtxt  test.wtxt  test.wwv
wld3tools/: .gitignore  CMakeLists.txt  pwtdecode_cli_main.c  wtdatclassdecode_cli_main.c  wtextract_cli_main.c
wtplayer/: CMakeLists.txt  Main.java  WTEngine.i  WTPlayerMain.java  greatreplacer.py  tmp.txt
wtplayer/javasrc/com/ms/com/: IUnknown.java  NoAutoScripting.java  SafeArray.java  Variant.java  _Guid.java
wtplayer/javasrc/com/ms/security/: PermissionDataSet.java  PermissionID.java  PermissionSet.java  PolicyEngine.java  SecurityClassLoader.java
wtplayer/javasrc/com/ms/wfc/app/: SystemInformation.java
wtplayer/javasrc/com/ms/wfc/io/: File.java
wtplayer/javasrc/com/ms/wfc/util/: Debug.java
wtplayer/javasrc/java/applet/: Applet.java
wtplayer/javasrc/netscape/javascript/: JSObject.java
wtplayer/javasrc/wildtangent/webdriver/: WT.java  WTActor.java  WTAudioClip.java  WTAudioClip3D.java  WTBitmap.java  WTCamera.java  WTCollisionInfo.java  WTConstants.java  WTContainer.java  WTDrop.java  WTEvent.java  WTEventCallback.java  WTEventJoystickCallback.java  WTFile.java  WTFont.java  WTGroup.java  WTJoystick.java  WTKeyboardPollInfo.java  WTLight.java  WTModel.java  WTMousePollInfo.java  WTObject.java  WTOnLoadEvent.java  WTOrientation3D.java  WTPortal.java  WTShadow.java  WTSpout.java  WTStage.java  WTString3D.java  WTSurfaceShader.java  WTSysInfo.java  WTVector3D.java  WTVisualizer.java  wt3dLib.java
wtplayer/javasrc/wildtangent/webdriver/impl/: InternalExceptionEvent.java  InternalExceptionEventCallback.java  InternalKeyboardEvent.java  InternalKeyboardEventCallback.java  InternalLoadEvent.java  InternalMouseEvent.java  InternalMouseEventCallback.java  InternalRenderEvent.java  InternalRenderEventCallback.java  WT.java  WTActor.java  WTAudioClip.java  WTAudioClip3D.java  WTBitmap.java  WTCamera.java  WTCollisionInfo.java  WTContainer.java  WTDrop.java  WTEvent.java  WTEventCallback.java  WTFile.java  WTFont.java  WTGroup.java  WTJoystick.java  WTKeyboardPollInfo.java  WTLight.java  WTModel.java  WTMousePollInfo.java  WTObject.java  WTOrientation3D.java  WTPortal.java  WTShadow.java  WTSpout.java  WTStage.java  WTString3D.java  WTSurfaceShader.java  WTSysInfo.java  WTVector3D.java  WTVisualizer.java
wtplayer/src/: IUnknown.cpp  IUnknown.hpp  InternalCallbackWrapper.cpp  InternalCallbackWrapper.hpp  InternalOnLoadCallbackWrapper.hpp  WT.cpp  WT.hpp  WTActor.cpp  WTActor.hpp  WTAudioClip.cpp  WTAudioClip.hpp  WTAudioClip3D.cpp  WTAudioClip3D.hpp  WTBitmap.cpp  WTBitmap.hpp  WTCamera.cpp  WTCamera.hpp  WTCollisionInfo.cpp  WTCollisionInfo.hpp  WTContainer.cpp  WTContainer.hpp  WTDrop.cpp  WTDrop.hpp  WTEvent.cpp  WTEvent.hpp  WTEventCallback.hpp  WTFile.cpp  WTFile.hpp  WTFont.cpp  WTFont.hpp  WTGroup.cpp  WTGroup.hpp  WTJoystick.cpp  WTJoystick.hpp  WTKeyboardPollInfo.cpp  WTKeyboardPollInfo.hpp  WTLight.cpp  WTLight.hpp  WTModel.cpp  WTModel.hpp  (+32 more)
wtplayer/templates/: run.sh.template
